# BoostFileTransfer

./: .gitignore  CMakeLists.txt  Readme.md
client/: main.cpp
server/: main.cpp
